[package]
name = "mycellium-storage"
version = "0.0.0"
description = "Storage-port adapter for Mycellium: encrypted file-backed key-value store + at-rest identity encryption"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rpassword = "7"
mycellium-core = { path = "../mycellium-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
# Encrypt the seed at rest: passphrase -> Argon2id -> ChaCha20-Poly1305.
argon2 = "0.5"
chacha20poly1305 = "0.10"

[lints.rust]
unsafe_code = "forbid"
