[package]
name = "mycellium-transport"
version = "0.0.0"
description = "Transport-port adapters for Mycellium (framing, TCP, libp2p)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
# libp2p is the production direct line; on by default for rich hosts. A minimal
# or embedded shell can turn it off and keep just the framed TCP transport.
default = ["libp2p"]
libp2p = ["dep:libp2p", "dep:libp2p-stream", "dep:tokio", "dep:futures"]

[dependencies]
mycellium-core = { path = "../mycellium-core" }
anyhow = "1"
# libp2p transport (production direct line): tcp + noise + yamux + streams.
# Disable libp2p's broad default feature set so unused DNS/mDNS/QUIC/UPnP
# dependencies are not pulled into the native build/audit surface.
libp2p = { version = "0.56", default-features = false, features = ["tokio", "tcp", "noise", "yamux", "macros", "ed25519", "relay"], optional = true }
libp2p-stream = { version = "0.4.0-alpha", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }
futures = { version = "0.3", optional = true }

[lints.rust]
unsafe_code = "forbid"
