[package]
name = "mycellium-transport"
version = "0.0.0"
description = "Direct QUIC transport and optional diagnostic adapters for Mycellium"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
# Native clients ship only the protocol's direct QUIC path. The CLI explicitly
# enables the old raw-TCP diagnostic adapter and optional DHT commands.
default = ["quic"]
quic = [
    "dep:libp2p",
    "dep:libp2p-stream",
    "dep:tokio",
    "dep:futures",
    "libp2p/tokio",
    "libp2p/quic",
    "libp2p/macros",
    "libp2p/ed25519",
]
legacy-tcp = []
dht = [
    "quic",
    "libp2p/tcp",
    "libp2p/noise",
    "libp2p/yamux",
    "libp2p/kad",
]

[dependencies]
mycellium-core = { path = "../mycellium-core" }
anyhow = "1"
# libp2p transport (production direct line): authenticated QUIC streams.
# Disable libp2p's broad default feature set so unused DNS/mDNS/UPnP
# dependencies are not pulled into the native build/audit surface.
libp2p = { version = "0.56", default-features = false, optional = true }
libp2p-stream = { version = "0.4.0-alpha", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }
futures = { version = "0.3", optional = true }

[lints.rust]
unsafe_code = "forbid"
